specs/other/ingress.yaml
# Ingress YAML
# See: https://kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/#enable-the-ingress-controller

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    # See: https://kubernetes.github.io/ingress-nginx/examples/rewrite/
    # NOTE: this only works for version 0.x.x of the Ngnix Ingress controller.
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: frontend.info
    http:
      paths:
      - path: /app/?(.*)
        backend:
          serviceName: kmaps
          servicePort: 80
